<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_clear_llamas"
        android:icon="@drawable/llama_action_clear"
        android:title="@string/action_clear_llamas"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />



    <item android:id="@+id/action_algorithm_randomize_llamas"
        android:icon="@drawable/action_bar_button"
        android:title="@string/action_algorithm_randomize_llamas"
        android:orderInCategory="2"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_quantum_randomize_llamas"
        android:icon="@drawable/action_bar_button"
        android:title="@string/action_quantum_randomize_llamas"
        android:orderInCategory="3"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_download_quantum_llamas"
        android:icon="@drawable/action_bar_button"
        android:title="@string/action_download_quantum_llamas"
        android:orderInCategory="4"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_wear_llamas"
        android:icon="@drawable/action_bar_button"
        android:title="@string/action_wear_llamas"
        android:orderInCategory="5"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="6"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
        <!-- Settings:
            -Number of quantum llamas to download (n)
            -About
                -Fun llama story (perhaps quantum randomly retrieved from a
                    library of several llama stories from GitHub?)
                -About ANU quantum optics lab
                -Visit Llama Web
                -View source on GitHub
        -->

</menu>
